# todo

./: pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
django_project/: settings.py
templates/: base.html
templates/registration/: signup.html
