[tool.poetry]
name = "todo-regular-django"
version = "0.1.0"
description = ""
authors = ["demonr <scv3lrr@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.16"
environs = {extras = ["django"], version = "^11.2.1"}
psycopg = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
